syntax = "proto3";

package BeeGees.Commands.Responses;

message ShipmentCreatedResponse {
    string ShipmentId = 1;
    bool Success = 2;
}